2011-06-20  Denis Lila  <dlila@redhat.com>

	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioDataLine.java
	(bufferSize): Remove.
	(getBufferSize): Return stream.getBufferSize().
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioSourceDataLine.java
	(connectLine): Improve formatting.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioTargetDataLine.java
	(connectLine): Set up flags to adjust the latency, if needed.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/Stream.java
	(bufAttr, bufAttrMutex): New members.
	(setBufAttr, bufferAttrCallback): New methods. They both set bufAttr.
	(getBufferSize): Return the current buffer size.
	(connectForRecording): Add a flags argument to allow callers to chose the
	flags.
	(stateCallback): When the stream is ready, set the buffer attributes to
	the actual ones used by the server.
	* pulseaudio/src/native/org_classpath_icedtea_pulseaudio_Stream.c
	(buf_attr_changed_callback): New function. 
	(Java_org_classpath_icedtea_pulseaudio_Stream_native_1pa_1stream_1new):
	Set the buffer attribute callback.

2011-06-17  Denis Lila  <dlila@redhat.com>

	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/Stream.java
	(FLAG_NOFLAGS, FLAG_START_CORKED, FLAG_INTERPOLATE_TIMING,
	 FLAG_NOT_MONOTONIC, FLAG_AUTO_TIMING_UPDATE, FLAG_NO_REMAP_CHANNELS,
	 FLAG_NO_REMIX_CHANNELS, FLAG_FIX_FORMAT, FLAG_FIX_RATE,
	 FLAG_FIX_CHANNELS, FLAG_DONT_MOVE, FLAG_VARIABLE_RATE, FLAG_PEAK_DETECT,
	 FLAG_START_MUTED, FLAG_ADJUST_LATENCY, FLAG_EARLY_REQUESTS,
	 FLAG_DONT_INHIBIT_AUTO_SUSPEND, FLAG_START_UNMUTED, FLAG_FAIL_ON_SUSPEND):
	New static long variables mirroring pa_stream_flag_t values.
	(STATE_UNCONNECTED, STATE_CREATING, STATE_READY, STATE_FAILED,
	 STATE_TERMINATED): Add the STATE_ prefix to distinguish them from
	the flag variables.
	(native_pa_stream_connect_playback, native_pa_stream_connect_record):
	Change flags parameter to long.